<resources>
    <string name="app_name">SuperHeroesApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alias">Alias:</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="lugar_de_nacimiento">Lugar de nacimiento:</string>
    <string name="genero">Género:</string>
    <string name="raza">Raza:</string>
    <string name="inteligencia">Inteligencia:</string>
    <string name="fuerza">Fuerza:</string>
    <string name="velocidad">Velocidad:</string>
    <string name="durabilidad">Durabilidad:</string>
    <string name="poder">Poder:</string>
    <string name="combate">Combate:</string>
    <string name="buscar_heroe">Buscar héroe...</string>
</resources>
